--- a/app/internal_packages/composer/styles/composer.less
+++ b/app/internal_packages/composer/styles/composer.less
@@ -126,7 +126,7 @@
 
   button {
     cursor: pointer;
-    color: color-mix(in srgb, color-mix(in srgb, @btn-default-text-color 88%, @component-active-color), transparent 30%);
+    color: rgb(from color-mix(in srgb, @btn-default-text-color 88%, @component-active-color) r g b / 70%);
     padding: 4px 4.7px;
     border: none;
     background: none;
@@ -136,7 +136,7 @@
     max-width: 32px;
 
     &:hover {
-      color: color-mix(in srgb, color-mix(in srgb, @btn-default-text-color 88%, @component-active-color), transparent 5%);
+      color: rgb(from color-mix(in srgb, @btn-default-text-color 88%, @component-active-color) r g b / 95%);
       background: none;
     }
     &.with-select {
@@ -299,11 +299,11 @@ body.platform-win32 {
       white-space: nowrap;
 
       img.content-mask {
-        background-color: color-mix(in srgb, color-mix(in srgb, @btn-default-text-color 88%, @component-active-color), transparent 30%);
+        background-color: rgb(from color-mix(in srgb, @btn-default-text-color 88%, @component-active-color) r g b / 70%);
       }
       &:hover {
         img.content-mask {
-          background-color: color-mix(in srgb, color-mix(in srgb, @btn-default-text-color 88%, @component-active-color), transparent 5%);
+          background-color: rgb(from color-mix(in srgb, @btn-default-text-color 88%, @component-active-color) r g b / 95%);
         }
       }
       &.btn-enabled {
