--- a/app/internal_packages/message-list/styles/message-list.less
+++ b/app/internal_packages/message-list/styles/message-list.less
@@ -584,7 +584,7 @@ body.platform-win32 {
 
 .download-all {
   @download-btn-color: fadeout(#929292, 20%);
-  @download-hover-color: color-mix(in srgb, @component-active-color, transparent 20%);
+  @download-hover-color: rgb(from @component-active-color r g b / 80%);
 
   display: flex;
   align-items: center;
