--- a/app/static/style/components/contenteditable.less
+++ b/app/static/style/components/contenteditable.less
@@ -111,7 +111,7 @@
       }
       &:hover,
       &:active {
-        color: lighten(@text-color-link, 10%);
+        color: color-mix(in srgb, @text-color-link, white 10%);
         background: transparent;
       }
     }
