--- a/app/static/style/components/editable-list.less
+++ b/app/static/style/components/editable-list.less
@@ -33,7 +33,7 @@
         position: absolute;
         top: -1px;
         background-color: @component-active-color;
-        box-shadow: 0 0 1px color-mix(in srgb, transparent, @component-active-color 50%);
+        box-shadow: 0 0 1px rgb(from @component-active-color r g b / 50%);
       }
     }
 
