--- a/app/static/style/email-frame.less
+++ b/app/static/style/email-frame.less
@@ -126,7 +126,7 @@
   }
 
   a:visited {
-    color: darken(@text-color-link, 10%);
+    color: color-mix(in srgb, @text-color-link, black 10%);
   }
   a img {
     border-bottom: 0;
